--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,7 +1,15 @@
 name = "arsystream"
 main = "src/index.js"
 compatibility_date = "2024-01-01"
+workers_dev = true
 
 [site]
 bucket = "./public"
-entry-point = "."
+entry-point = "src"
+
+[build]
+command = "npm run build"
+
+[[r2_buckets]]
+binding = "MEDIA_BUCKET"
+bucket_name = "arsystream-media"
