--- a/package.json
+++ b/package.json
@@ -1,17 +1,12 @@
 {
-  "name": "arsystream",
+  "name": "cf-video-proxy",
   "version": "1.0.0",
-  "description": "Simple online video player",
-  "main": "src/index.js",
+  "description": "Single-file Cloudflare Worker video player",
+  "main": "index.js",
   "scripts": {
-    "build": "tailwindcss -i ./src/input.css -o ./public/style.css --minify",
-    "dev": "wrangler dev",
     "deploy": "wrangler deploy"
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.0",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.32",
-    "wrangler": "^3.0.0"
+    "wrangler": "^4.0.0"
   }
 }
