--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,10 +1,3 @@
-name = "arsystream"
+name = "cf-video-proxy"
 main = "src/index.js"
 compatibility_date = "2024-01-01"
-
-[site]
-bucket = "./public"
-entry-point = "src"
-
-[vars]
-NODE_VERSION = "20"
